# all-repos-readme

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  config.json  conftest.py  generic.md  main.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_bad_linting.py  tox.ini
.githooks/: _censor_creds.py  post-commit  pre-commit  pre-push
.githooks/_post_commit/: _restore_creds.py
.githooks/_pre_commit/: _censor_creds.py
.githooks/tests/: test_apiKey_hooks.py
.github/: EXAMPLE_README.md
.github/scripts/: migrate_secrets.py
.github/workflows/: github-linters-CI.yml  tox-github-action.yml
all_repos_add_readme/: _exceptions.py  _logger.py  constants.py  logger_constants.py  main.py  readme_template.md
all_repos_add_readme/github_utils/: _github_api.py  _github_config.py  _github_repo.py  _repo_ignore.py  constants.py  exceptions.py  git_utils.py  github_api.py  repo_ignore.py
all_repos_add_readme/github_utils/tests/: test_git_utils.py  test_github_api.py  test_github_config.py  test_github_repo.py  test_markdown.md  test_repo_ignore.py
all_repos_add_readme/tests/: test_constants.py  test_logger.py  test_main.py
github_utils/: _github_api.py  constants.py  git_utils.py  github_constants.py
