[metadata]
name = all_repos_readme
version = 1.0
description = A simple tool to add a generic README.md file to all of the user''s repos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uryyakir/all-repos-readme
author = Uri Yakir
author_email = uryyakir@gmail.com

[options]
packages = find:
include_package_data = True
install_requires =
    identify
python_requires = >=3.6.1

[options.packages.find]
exclude =
    *.tests

[options.entry_points]
console_scripts =
    all-repos-add-readme=all_repos_add_readme.main:main

[mypy]
exclude = venv/
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[flake8]
exclude = venv\
ignore = E501

[coverage:run]
omit =
    venv/*
    */site-packages/*
